k8s/order-service/order_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  namespace: order-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order-service
          image: amjadfqs/g1_a_order_service_k8s:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: order-namespace
spec:
  selector:
    app: order
  ports:
    - port: 8080
